<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
           android:layout_margin="20dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                />

        <EditText
            android:layout_below="@+id/title"
            android:id="@+id/username"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />

            <Button
                android:id="@+id/loginBtn"
                android:layout_below="@+id/password"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</ScrollView>
    <ProgressBar
        android:id="@+id/loading_login"
        android:layout_width="50dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp" />

</RelativeLayout>