<resources>
    <string name="app_name">KeralaRescue Camps</string>
    <string name="action_sync">Sync</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_login">Coordinator Login</string>
    <string name="title_activity_fields">Person Registration</string>
    <string name="camp_name">Camp Name</string>
    <string name="person_registration">Person Registration</string>
    <string name="gender">Gender</string>
    <string name="district">Residence District</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="note">Note</string>
    <string name="submit">Add Person</string>
    <string name="title_activity_camps">Select Camp Details</string>
    <string name="select_district">Select District</string>
    <string name="select_camp">Select Camp</string>
    <string name="search">Search</string>
    <string name="title_activity_sync_status">SyncStatusActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_requirement">Camp Requirement page</string>
    <string name="number_of_infants_2_yr"><![CDATA[Number of Infants (<2 yr )]]></string>
    <string name="add_requirement">Add Requirement</string>
    <string name="backup">Backup</string>
    <string name="update_requirement">Update Requirement</string>
</resources>
