...
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

              </Spinner> -->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/title_container"

                android:layout_marginTop="20dp"
...
